--- a/style.css
+++ b/style.css
@@ -13,6 +13,18 @@ body{
     background: #8c4e9b;
 }
 
+.container{
+    padding: 45px;
+    border-radius: 10px;
+    background: #F8F8F8;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+    text-align: center;
+}
+
+h2{
+    margin: 20px 0;
+}
+
 .wrapper{
     padding: 25px;
     border-radius: 10px;
@@ -43,7 +55,7 @@ body{
     height: calc(100% / 4 - 10px);
     width: calc(100% / 4 - 10px);
 }
-/*
+
 .card.shake{
     animation: shake 0.35s ease-in-out;
 }
@@ -53,19 +65,19 @@ body{
 transform: translateX(0);
     }
     20%{
-transform: translateX(-13px);
+transform: translateX(-3px);
     }
     40%{
-transform: translateX(13px);
+transform: translateX(3px);
     }
     60%{
-transform: translateX(-8px);
+transform: translateX(-3px);
     }
     80%{
-transform: translateX(8px);
+transform: translateX(3px);
     }
 }
-*/
+
 .card .view{
     width: 100%;
     height: 100%; 
@@ -116,29 +128,10 @@ button{
     background: rgb(255, 255, 255);
     color: #8c4e9b;
     cursor: pointer;
-    border-color: #8c4e9b;
+    border: 1px solid #8c4e9b;
 }
 
 button:hover{
     color: #fff;
     background: #8c4e9b;
 }
-
-button::after{
-    width: 90px;
-    height: 50px;
-}
-
-/*
-@media screen and (max-width: 700px) {
-    .cards{ 
-    height: 350px;
-    width: 350px;
-    }
-.card .front-view img{
-    width: 17px;
-    }
-.card .back-view img{
-    max-width: 40px;
-    }
-}*/
